[package]
name = "htmx_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
htmx_comp_macro = { path = "./htmx_comp_macro" }
async-std = "1.10"
lazy_static = "1.4.0"
maud = "0.25.0"

[lib]
name = "htmx_server"
path = "src/lib.rs"
