[package]
name = "testing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htmx_server = { path = "../" }
htmx_comp_macro = { path = "../htmx_comp_macro" }
async-std = "1.10"
httparse = "1.8.0"
lazy_static = "1.4.0"

